# PenguinGPT

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  install-system.sh  install.sh  package-lock.json  package.json  penguingpt-installer.sh  uninstall-system.sh  uninstall.sh
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/desktop/: PenguinGPT.desktop
src-tauri/src/: lib.rs  main.rs
