[package]
name = "penguingpt"
version = "0.1.0"
description = "Unofficial ChatGPT desktop wrapper for Linux"
authors = ["PenguinGPT"]
license = "MIT"
edition = "2021"

[lib]
name = "penguingpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
